--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,10 @@ language: php
 php:
   - "5.5"
   - "5.4"
+before_script:
+    - composer install --dev
+    - phpenv rehash
+script: phpunit
+notifications:
+    email:
+        - code@rightleaf.com
