--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
 before_script:
     - composer install --dev
     - phpenv rehash
-script: phpunit phpunit.xml
+script: phpunit
 notifications:
     email:
         - code@rightleaf.com
