4th times a charm... maybe

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
         "phpunit/phpunit": "3.7.*"
     },
     "autoload": {
-        "psr-0": {"Rightleaf\\Cart": "src/"}
+        "psr-0": {"Rightleaf": "src/"}
     }
 }
