--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "php": ">=5.*.*"
+        "php": ">=5.*"
     },
     "require-dev": {
         "mockery/mockery": ">=0.7.2",
