--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rightleaf/cart",
+    "name": "shaileshbonzer/cart",
     "version": "0.0.12",
     "type": "library",
     "description": "A custom order/cart library.",
